[tool.poetry]
name = "bakertube"
version = "0.1.0"
description = ""
authors = ["tdc <tdc@tdccc.com.tw>"]

[tool.poetry.dependencies]
python = "^3.8"
yt-dlp = "^2022.2.4"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
